-- Private build 4
- Improve the fix to RemoteConfiguration.decodeItem(...) made in build 3 (Graham)
- Update Macro.store(PropertyWriter) to handle macros that are both activity and key macros (Graham)
- Update RemoteConfiguration.parse(PropertyWriter) to handle the Macro.store(...) update (Graham)

Changes for v2.07
-- Release build 1
- As v2.06 build 15 with some diagnostic printouts commented out (Graham)
-- Release build 2
- Fix inability to open Activity Macro Editor (Graham)
- Update JP2BT interface to handle E2 area not a whole number of erase pages, as in URC7955 (Graham)
- Update raw download similarly to handle E2 area not a whole number of erase pages (Graham)
-- Private build 3
- Minor tweaks to Bluetooth support (Graham)
- Add support for subscribing to notification if remote supports subscription (Graham)
- When creating/editing manual protocol in RM, preserve device and command parameter settings when possible (Graham)
- When creating/editing manual protocol in RM, update data translation panel when parameter settings are edited (Graham)
- Fix bug in RM that a loaded manual protocol did not show in protocol drop-down list (Graham)
- Fix bug in RM protocol editor causing procBox listeners to persist after editor closed (Graham)
-- Private build 4
- Fix a number of issues concerning the creation and editing of protocols in RM (Graham)
- Add RMIR Bluetooth support via the native Bluetooth support of Windows 10 (Graham)
-- Private build 5
- Add RMIR Bluetooth support via the Bluetooth Framework of Wireless Communication Library (WCL) from Soft Service Company (Graham)
-- Private build 6
- Upgrade jSerialComm to v2.5.0 to fix RMIR crashing with 32-bit Java in 64-bit Windows (Graham)
- Upgrade jp12serial from v0.23 to 0.24 to fix issues with uploading when using newer, faster, computers (Graham)
-- Private build 7
- Add new protocol property OldRefs which converts, on the fly, RDFs and upgrades with old PID and variant names to current values (Graham)